--- a/.gitignore
+++ b/.gitignore
@@ -258,7 +258,7 @@ blockchain/history
 #truffle
 .tern-port
 yarn.lock
-package-lock.json
+#package-lock.json
 
 ### Windows ###
 # Windows thumbnail cache files
