--- a/eth-todo-list-react/package.json
+++ b/eth-todo-list-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "td7_ux",
+  "name": "eth-todo-list-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "web3": "^1.0.0-beta.46",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-scripts": "3.4.0"
   },
   "scripts": {
